<resources>
    <string name="app_name" translatable="false">StoryU</string>
    <string name="gmaps_api_key" translatable="false">YOUR API KEY</string>

    <!-- String Tools -->
    <string name="user" translatable="false">User</string>
    <string name="date" translatable="false">Date</string>

    <!-- Title Fragment -->
    <string name="title_fragment_setting">Setting</string>
    <string name="title_fragment_story_detail">Story Detail</string>
    <string name="title_fragment_add_story">New Story</string>
    <string name="title_stories_location">Stories Location</string>

    <!-- Location -->
    <string name="title_ask_permission_location">Enable location</string>
    <string name="message_location_access">We request access to your location to provide convenience in enhancing the user experience of using the Distory application.</string>
    <string name="title_location_required">Location Permission Needed</string>
    <string name="message_location_required">This app needs the Location permission, please accept to use location functionality</string>
    <string name="unknown_address">Unknown Address</string>

    <!-- Setting -->
    <string name="label_setting_general">General</string>
    <string name="label_setting_theme">Theme</string>
    <string name="label_theme_mode_system">System</string>
    <string name="label_theme_mode_light">Light</string>
    <string name="label_theme_mode_dark">Dark</string>
    <string name="label_dialog_theme">Choose Theme</string>
    <string name="label_dialog_language">Choose Language</string>
    <string name="label_setting_language">Language</string>
    <string name="label_language_english">English</string>
    <string name="label_language_system">Default System</string>
    <string name="label_language_indonesia" translatable="false">Indonesia</string>
    <string name="label_logout">Sign Out</string>

    <!-- Auth -->
    <string name="hint_full_name">Enter your full name</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>

    <string name="header_signin_title">Sign in.</string>
    <string name="header_signin_subtitle">Welcome back You\'ve been missed</string>
    <string name="header_signup_title">Sign up.</string>
    <string name="header_signup_subtitle">Hello user, we hope you have a great journey</string>

    <string name="label_full_name">Full Name</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>

    <string name="label_signin_here">Already have an account?</string>
    <string name="label_signin">Sign In</string>
    <string name="label_signup_here">Don\'t have an account?</string>
    <string name="label_signup">Sign Up</string>

    <string name="validation_full_name">Full name can only be characters</string>
    <string name="validation_email">Your email format is not correct</string>
    <string name="validation_password">Minimum of %d characters</string>

    <!-- Story -->
    <string name="label_description">Description</string>
    <string name="label_photo">Photo</string>
    <string name="label_change_photo">Change Photo</string>
    <string name="label_day">%1$d days ago</string>
    <string name="label_hour">%1$d hours ago</string>
    <string name="label_minutes">%1$d minutes ago</string>
    <string name="label_seconds">%1$d seconds ago</string>

    <string name="hint_description">Enter your story description</string>
    <string name="hint_photo">Choose your story photo</string>

    <string name="validation_photo_empty">Please choose a photo</string>

    <string name="actions_add_story">Post</string>

    <string name="message_success_upload_story">Your story has been posted!</string>

    <!-- Welcome -->
    <string name="title_welcome_1">Connect with Friends through Story</string>
    <string name="description_welcome_1">Create and share stories to connect with your friends. Share your precious moments and find inspiration from their stories.</string>
    <string name="title_welcome_2">Express Yourself Through Story</string>
    <string name="description_welcome_2">Use StoryU\'s creative features to express yourself. Unleash your imagination and share your unique stories with the community.</string>
    <string name="title_welcome_3">Find Inspiration, Share Your Story</string>
    <string name="description_welcome_3">Find inspiring stories from other users. Then, share your precious moments to inspire others.</string>
    <string name="start_now">Start Now</string>

    <!-- Widget -->
    <string name="app_widget_description">Today\'s latest story can be viewed from the Widget</string>

    <!-- Navigation -->
    <string name="label_nav_home">Home</string>
    <string name="label_nav_new_story">New Story</string>
    <string name="label_nav_settings">Settings</string>

    <!-- Common -->
    <string name="validation_must_not_empty">Field cannot be empty</string>
    <string name="label_loading">Loading…</string>
    <string name="message_snackbar" translatable="false">This is a custom snackbar</string>
    <string name="message_signin_success">Sign in successful</string>
    <string name="message_signin_failed">Sign in failed. Please check your email and password again.</string>
    <string name="header_toolbar_home">Welcome,</string>
    <string name="tools_description" translatable="false">Tools Description</string>
    <string name="label_empty_data">No data available</string>
    <string name="label_error">Something went wrong</string>
    <string name="label_icon_gallery">Gallery</string>
    <string name="label_icon_camera">Camera</string>
    <string name="action_refresh">Refresh</string>
</resources>