<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.auth.SignInFragment">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/logoTop"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_welcome" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textXL3"
        android:textColor="?attr/colorPrimary"
        android:text="@string/header_signin_title"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        app:layout_constraintTop_toBottomOf="@+id/logoTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textMuted"
        android:fontFamily="@font/inter_semibold"
        android:textSize="@dimen/font_medium"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:text="@string/header_signin_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title" />

    <com.nizarfadlan.storyu.presentation.ui.base.component.InputLayout
        android:id="@+id/layout_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_email"
        app:placeholderText="@string/hint_email"
        app:startIconDrawable="@drawable/ic_mail_24"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_36dp"
        app:layout_constraintTop_toBottomOf="@+id/subtitle"
        app:layout_constraintEnd_toEndOf="@id/subtitle"
        app:layout_constraintStart_toStartOf="@id/subtitle">

        <com.nizarfadlan.storyu.presentation.ui.base.component.EmailInputEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress" />

    </com.nizarfadlan.storyu.presentation.ui.base.component.InputLayout>

    <com.nizarfadlan.storyu.presentation.ui.base.component.InputLayout
        android:id="@+id/layout_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_password"
        app:placeholderText="@string/hint_password"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_lock_24"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_14dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_login_email"
        app:layout_constraintEnd_toEndOf="@id/layout_login_email"
        app:layout_constraintStart_toStartOf="@id/layout_login_email">

        <com.nizarfadlan.storyu.presentation.ui.base.component.PasswordInputEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password" />

    </com.nizarfadlan.storyu.presentation.ui.base.component.InputLayout>

    <Button
        android:id="@+id/btnSignIn"
        style="@style/buttonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:text="@string/label_signin"
        app:layout_constraintTop_toBottomOf="@id/layout_login_password"
        app:layout_constraintEnd_toEndOf="@id/layout_login_password"
        app:layout_constraintStart_toStartOf="@id/layout_login_password" />

    <TextView
        android:id="@+id/tvSignUpHere"
        style="@style/textNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_signup_here"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvSignUp"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

    <TextView
        android:id="@+id/tvSignUp"
        android:paddingHorizontal="@dimen/dimen_10dp"
        android:fontFamily="@font/inter_bold"
        android:textSize="@dimen/font_normal"
        android:textColor="?attr/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_signup"
        app:layout_constraintStart_toEndOf="@id/tvSignUpHere"
        app:layout_constraintTop_toTopOf="@id/tvSignUpHere"
        app:layout_constraintBottom_toBottomOf="@id/tvSignUpHere"
        app:layout_constraintEnd_toEndOf="parent" />

    <include
        android:id="@+id/loading_layout"
        android:visibility="gone"
        layout="@layout/layout_loading" />

</androidx.constraintlayout.widget.ConstraintLayout>