<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.main.setting.SettingFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_20dp"
                android:paddingHorizontal="@dimen/dimen_10dp"
                android:paddingVertical="@dimen/dimen_15dp"
                app:shapeAppearance="?attr/shapeAppearanceCornerLarge"
                style="?attr/materialCardViewFilledStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/dimen_18dp"
                    android:paddingHorizontal="@dimen/dimen_20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_medium"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/label_setting_general" />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_13dp"
                        android:layout_marginBottom="@dimen/dimen_5dp" />

                    <LinearLayout
                        android:id="@+id/switchTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="@dimen/dimen_10dp"
                        android:paddingHorizontal="@dimen/dimen_8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_setting_theme"
                            android:textSize="@dimen/font_medium"
                            android:fontFamily="@font/inter_semibold"
                            android:paddingVertical="5dp" />

                        <TextView
                            android:id="@+id/tvTheme"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/textNormal"
                            android:text="@string/label_theme_mode_system" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/switchLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="@dimen/dimen_10dp"
                        android:paddingHorizontal="@dimen/dimen_8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_setting_language"
                            android:textSize="@dimen/font_medium"
                            android:fontFamily="@font/inter_semibold"
                            android:paddingVertical="5dp" />

                        <TextView
                            android:id="@+id/tvLanguage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/textNormal"
                            android:text="@string/label_language_english" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/action_logout"
                style="@style/buttonPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                app:icon="@drawable/ic_logout_24"
                app:iconSize="@dimen/dimen_24dp"
                app:iconGravity="textStart"
                android:layout_marginHorizontal="@dimen/dimen_15dp"
                android:text="@string/label_logout" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/loading_layout"
        android:visibility="gone"
        layout="@layout/layout_loading" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>