<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_welcome_scene"
    tools:context=".presentation.ui.welcome.WelcomeActivity">

    <TextView
        android:id="@+id/titleMenu1"
        style="@style/textXL3"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:paddingHorizontal="@dimen/dimen_20dp"
        android:text="@string/title_welcome_1"
        android:layout_marginTop="@dimen/dimen_120dp"
        app:layout_constraintVertical_bias="1.5"
        app:layout_constraintBottom_toTopOf="@id/descMenu1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/descMenu1"
        style="@style/textSM"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:paddingHorizontal="@dimen/dimen_20dp"
        android:text="@string/description_welcome_1"
        app:layout_constraintBottom_toTopOf="@+id/logoMenu1"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu1"
        app:layout_constraintStart_toStartOf="@+id/titleMenu1"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu1" />

    <ImageView
        android:id="@+id/logoMenu1"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_250dp"
        android:layout_marginTop="@dimen/dimen_28dp"
        android:src="@drawable/welcome_1"
        app:layout_constraintBottom_toTopOf="@id/startNow"
        app:layout_constraintEnd_toEndOf="@+id/descMenu1"
        app:layout_constraintStart_toStartOf="@+id/descMenu1"
        app:layout_constraintTop_toBottomOf="@+id/descMenu1" />

    <TextView
        android:id="@+id/titleMenu2"
        style="@style/textXL3"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:paddingHorizontal="@dimen/dimen_20dp"
        android:text="@string/title_welcome_2"
        android:layout_marginTop="@dimen/dimen_120dp"
        app:layout_constraintVertical_bias="1.5"
        app:layout_constraintBottom_toTopOf="@id/descMenu2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/descMenu2"
        style="@style/textSM"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:paddingHorizontal="@dimen/dimen_20dp"
        android:text="@string/description_welcome_2"
        app:layout_constraintBottom_toTopOf="@+id/logoMenu2"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu2"
        app:layout_constraintStart_toStartOf="@+id/titleMenu2"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu2" />

    <ImageView
        android:id="@+id/logoMenu2"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_250dp"
        android:layout_marginTop="@dimen/dimen_28dp"
        android:src="@drawable/welcome_2"
        app:layout_constraintBottom_toTopOf="@id/startNow"
        app:layout_constraintEnd_toEndOf="@+id/descMenu2"
        app:layout_constraintStart_toStartOf="@+id/descMenu2"
        app:layout_constraintTop_toBottomOf="@+id/descMenu2" />

    <TextView
        android:id="@+id/titleMenu3"
        style="@style/textXL3"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:paddingHorizontal="@dimen/dimen_20dp"
        android:text="@string/title_welcome_3"
        android:layout_marginTop="@dimen/dimen_120dp"
        app:layout_constraintVertical_bias="1.5"
        app:layout_constraintBottom_toTopOf="@id/descMenu3"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/descMenu3"
        style="@style/textSM"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:paddingHorizontal="@dimen/dimen_20dp"
        android:text="@string/description_welcome_3"
        app:layout_constraintBottom_toTopOf="@+id/logoMenu3"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu3"
        app:layout_constraintStart_toStartOf="@+id/titleMenu3"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu3" />

    <ImageView
        android:id="@+id/logoMenu3"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_250dp"
        android:layout_marginTop="@dimen/dimen_28dp"
        android:src="@drawable/welcome_3"
        app:layout_constraintBottom_toTopOf="@id/startNow"
        app:layout_constraintEnd_toEndOf="@+id/descMenu3"
        app:layout_constraintStart_toStartOf="@+id/descMenu3"
        app:layout_constraintTop_toBottomOf="@+id/descMenu3" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu1"
        android:layout_width="@dimen/dimen_12dp"
        android:layout_height="@dimen/dimen_12dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        app:altSrc="@drawable/ic_circle_fill_24"
        app:layout_constraintEnd_toStartOf="@+id/menu2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="?attr/colorOnBackground" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu2"
        android:layout_width="@dimen/dimen_12dp"
        android:layout_height="@dimen/dimen_12dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        app:altSrc="@drawable/ic_circle_fill_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu1"
        app:layout_constraintEnd_toStartOf="@+id/menu3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu1"
        app:layout_constraintTop_toTopOf="@+id/menu1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="?attr/colorOnBackground" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu3"
        android:layout_width="@dimen/dimen_12dp"
        android:layout_height="@dimen/dimen_12dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        app:altSrc="@drawable/ic_circle_fill_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu2"
        app:layout_constraintTop_toTopOf="@+id/menu2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="?attr/colorOnBackground" />

    <Button
        android:id="@+id/startNow"
        style="@style/buttonPrimary"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_18dp"
        android:layout_marginEnd="@dimen/dimen_18dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:alpha="0"
        android:text="@string/start_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/logoTop"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_welcome"
        android:tint="?attr/colorPrimary" />

</androidx.constraintlayout.motion.widget.MotionLayout>